feat: Phase 4 — analytics tracking + 'Rug Munch Intelligence' branding
- All user-facing copy updated: 'Rug Munch' → 'Rug Munch Intelligence'
- analytics.ts: fire-and-forget event tracking service
- Popup + side panel: track scan/open events
- manifest v0.2.0: updated name + description

--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Marcus — Rug Munch</title>
+  <title>Marcus — Rug Munch Intelligence</title>
 </head>
 <body>
   <div id="root"></div>
