--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rug Munch Scanner</title>
+  <title>Rug Munch Intelligence</title>
 </head>
 <body>
   <div id="root"></div>
