--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -3,6 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>Marcus — Rug Munch Intelligence</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body, #root {
+      width: 100%;
+      height: 100%;
+      min-height: 100vh;
+      background-color: #0B0714;
+      color: #E8E6F0;
+      font-family: system-ui, -apple-system, sans-serif;
+    }
+    body { overflow: hidden; }
+    #root { display: flex; flex-direction: column; }
+  </style>
 </head>
 <body>
   <div id="root"></div>
